add garbage collection

--- a/qof/website/why-qof.html
+++ b/qof/website/why-qof.html
@@ -396,6 +396,11 @@ below.
      doing. Yet the signs are clear.)
      </p>
      <br>
+<li> <p><b>Why C (or C++)? Why not a better language?</b>
+     OK, I cave.  Yes, it sure would be nice to have garbage 
+     collection built into the language.
+     </p>
+     <br>
 <li> <p><b>Why not go directly from GUI to SQL, and back?</b>
      This is the traditional
      'data-driven' programming style.  It has short-comings, the most notable
