update website, change link from pre1

--- a/qof/website/index.html
+++ b/qof/website/index.html
@@ -14,7 +14,9 @@
 <li><a href="http://sourceforge.net/projects/qof/">SourceForge</a></li>
 <li><a href="#docs">Documentation</a></li>
 <li><a href="#download">Downloads</a></li>
-<li><a href="#devel">Development</a></li>
+<li><a href="#devel">Development</a>
+<ul><li><a href="hacking.html">Packaging</a></li></ul>
+</li>
 <li><a href="#example">Examples</a><ul>
 <li><a href="#generate">Generating</a></li>
 <li><a href="#online">Online</a></li></ul>
@@ -227,7 +229,7 @@ backend. </p>
 <div>
 <ul>
 <li>The source code release for v0.6.0 is available from <a title="qof-0.6.0.tar.gz"
-href="http://prdownloads.sourceforge.net/qof/qof-0.6.0-pre1.tar.gz?download"
+href="http://prdownloads.sourceforge.net/qof/qof-0.6.0.tar.gz?download"
 >SourceForge</a>.</li>
 <li>Debian packages will be available from the main mirrors soon but there
 are <b>test packages</b> available using a trivial apt repository.
@@ -279,4 +281,3 @@ included in the file <a href="copying.txt">copying.txt</a></p>
 </div>
 </body>
 </html>
-
